Add FrenchParse Service

--- a/app/index.html
+++ b/app/index.html
@@ -508,6 +508,8 @@
         <script src="js/controllers/notesTabController.js" type="text/javascript"></script>
         <script src="js/controllers/scriptsController.js" type="text/javascript"></script>
 
+        <script src="js/services/FrenchParserService.js" type="text/javascript"></script>
+        
 
 
         <!--Other library -->
